--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ node_modules/
 public/dist/
 .env.test
 .env.development
+
+z32_Notes.txt
+
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
+
