--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
-  "presets": [
-    "env",
-    "react"
-  ],
-  "plugins": [
-    "transform-class-properties",
-    "transform-object-rest-spread"
-  ]
+    "presets": ["@babel/preset-env", "@babel/preset-react"],      
+    "plugins":
+    [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-syntax-dynamic-import"
+    ]
 }
+
